<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context=".ReviewActivity">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:rating="5"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:clickable="false"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ratingBar"
        android:background="@color/colorGreyDark"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/view1">
        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/your_report"/>
    </ScrollView>

    <TextView
        android:id="@+id/tvContentLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/scrollView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="0 ký tự"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContentLength"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:padding="@dimen/activity_horizontal_padding"
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/cancel"
                android:onClick="cancel"
                android:textColor="@color/colorGreen"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnReport"
                android:padding="@dimen/activity_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:onClick="report"
                android:text="@string/report"
                android:textColor="@color/colorGreen"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
